src/main/java/com/example/incidentplatform/common/error/ForbiddenException.java
package com.example.incidentplatform.common.error;

public class ForbiddenException extends RuntimeException {
    public ForbiddenException(String message) {
        super(message);
    }

    public ForbiddenException(String message, Throwable cause) {
        super(message, cause);
    }
}
